# qt-cmake

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TextFinder.cpp  TextFinder.qrc  TextFinder.ui  main.cpp
TextFinder/: CMakeLists.txt  DESCRIPTION  README.md  TextFinder.h  TextFinder.ui  input.txt  jenkins.py
TextFinder/cmake/: fixup.cmake.in  pack.cmake
